--- a/src/templates/comprar.html
+++ b/src/templates/comprar.html
@@ -44,7 +44,7 @@
             </div>
 
             <div >
-                <button type="submit" id="btn-comprar" class="boton color-primario color-basico-fw pa-1">Comprar</button>
+                <button type="submit" id="btn-comprar" class="boton color-primario color-basico-fw pa-1" onclick="return confirmarCompra()">Comprar</button>
             </div>
         </form>
     
